--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="game-container">
+        <h1>Slay the Dragon</h1>
+        <div class="stats">
+            <p id="userHealth">Your Health: 100</p>
+            <p id="dragonHealth">Dragon's Health: 100</p>
+        </div>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
