Bug section to read me

--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dragon Slayer</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
     <link rel="manifest" href="assets/icons/site.webmanifest">
 </head>
-<body>
-    
-    <h1>Slay the Dragon</h1>
 
+<body>
+    <!--Heading-->
+    <h1>Slay the Dragon</h1>
+    <!--Game Message-->
     <div class="message-container">
-    <div id="gameMessage">Click the button to attack the dragon!</div>
-    <div id="gameMessageDragon"></div>
-    <div id="gameMessagePlayer"></div>
+        <div id="gameMessage">Click the button to attack the dragon!</div>
+        <div id="gameMessageDragon"></div>
+        <div id="gameMessagePlayer"></div>
     </div>
 
 
-
+    <!--Game Container-->
     <div class="game-container">
         <div class="health-container">
             <div class="health" id="userHealth">Your Health: 100</div>
             <div class="health" id="dragonHealth">Dragon's Health: 100</div>
         </div>
+        <!--Buttons-->
         <div class="button-container">
             <button id="attackButton">Attack!</button>
             <button id="muteButton">Mute</button>
@@ -36,4 +40,5 @@
     </div>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
